:construction: - Jordy Vargas - Pequeño cambio al margen del logo del header.

--- a/vamopueh/styles.css
+++ b/vamopueh/styles.css
@@ -18,6 +18,8 @@
     float: left;
     padding-top: 10px;
     box-sizing: border-box;
+    padding-left: 60px;
+    padding-right: 60px;
 }
 
 .encab-pag .nav-principal-left{
