--- a/vamopueh/styles.css
+++ b/vamopueh/styles.css
@@ -61,3 +61,68 @@
 .nav-principal-right li a:hover{
     color: #4C9ACC;
 }
+
+
+
+
+/*FOOTER*/
+.footer{
+    border: solid springgreen;
+    height: 50px;
+    width: 100%;
+    background: rgb(201, 223, 4);
+}
+
+.container-footer{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
+
+.a{
+    text-align: center;
+    text-transform: capitalize;
+    flex-grow: 1;
+    
+}
+
+.b{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    flex-grow: 2;
+    
+}
+
+.b a:hover{
+    color: white;
+}
+
+.c{
+    display: flex;
+    flex-grow: 1;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+
+.c li:hover{
+    cursor: pointer;
+    color: rgb(201, 223, 4);
+}
+
+.c a{
+    display: block;
+    width: 44px;
+    height: 44px;
+    border-radius: 50%;
+    background: white;
+    color: rgb(201, 223, 4);
+    text-align: center;
+    line-height: 44px;
+}
+
+.icon a:hover{
+    background:rgb(201, 223, 4);
+    color: white;
+}
