--- a/vamopueh/styles.css
+++ b/vamopueh/styles.css
@@ -1,13 +1,16 @@
 
 body {
     margin: 0 auto;
-    padding: 0px;
     font-family: 'Source Sans Pro', sans-serif;
     text-align: left;
 }
 
 p {
     font-size: small;
+}
+
+.Menu{
+    padding-top: 100px;
 }
 
 .row {
@@ -39,7 +42,7 @@ p {
     height: 200px;
 }
 
-img  {
+.row img  {
     border-radius: 20%;
 }
 
@@ -48,7 +51,7 @@ img  {
     height: 225px;
 }
 
-img:hover {
+.row img:hover {
     border: 1.5px solid orange;
 }
 
@@ -147,8 +150,8 @@ img:hover {
     float: left;
     padding-top: 10px;
     box-sizing: border-box;
-    padding-left: 60px;
-    padding-right: 60px;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 .encab-pag .nav-principal-left{
@@ -161,13 +164,13 @@ img:hover {
 .nav-principal-left li{
     float: left;
     list-style-type: none;
-    margin-right: 50px;
+    margin-right: 10px;
 }
 
 .nav-principal-right li{
     float: left;
     list-style-type: none;
-    margin-left: 50px;
+    margin-left: 10px;
 }
 
 .nav-principal-left li a{
@@ -175,13 +178,13 @@ img:hover {
     text-transform: uppercase;
     text-decoration: none;
     list-style-type: none;
-    line-height: 80px;
+    line-height: 40px;
 }
 .nav-principal-right li a{
     color: #44627A;
     text-transform: uppercase;
     text-decoration: none;
-    line-height: 80px;
+    line-height: 40px;
 }
 
 .nav-principal-left li a:hover{
@@ -196,13 +199,8 @@ img:hover {
 
 /*FOOTER*/
 .footer{
-    border: solid springgreen;
-    height: 50px;
-    width: 100%;
-    left: 0;
     background: rgb(201, 223, 4);
-    position: fixed;
-    bottom: 0;
+    padding-top: 25px;
 }
 
 .container-footer{
