:bug: - Jordy Vargas - Header listo, sólo queda editar estilos del footer.

--- a/vamopueh/styles.css
+++ b/vamopueh/styles.css
@@ -2,7 +2,7 @@
 body {
     margin: 0 auto;
     font-family: 'Source Sans Pro', sans-serif;
-    /* text-align: left; */
+    text-align: left;
 }
 
 p {
@@ -151,8 +151,8 @@ p {
     float: left;
     padding-top: 10px;
     box-sizing: border-box;
-    padding-left: 10px;
-    padding-right: 10px;
+    padding-left: 80px;
+    padding-right: 80px;
 }
 
 .encab-pag .nav-principal-left{
@@ -165,13 +165,13 @@ p {
 .nav-principal-left li{
     float: left;
     list-style-type: none;
-    margin-right: 10px;
+    margin-right: 40px;
 }
 
 .nav-principal-right li{
     float: left;
     list-style-type: none;
-    margin-left: 10px;
+    margin-left: 40px;
 }
 
 .nav-principal-left li a{
@@ -179,13 +179,13 @@ p {
     text-transform: uppercase;
     text-decoration: none;
     list-style-type: none;
-    line-height: 40px;
+    line-height: 80px;
 }
 .nav-principal-right li a{
     color: #44627A;
     text-transform: uppercase;
     text-decoration: none;
-    line-height: 40px;
+    line-height: 80px;
 }
 
 .nav-principal-left li a:hover{
